--- a/PA5/README
+++ b/PA5/README
@@ -1,163 +1,58 @@
-README file for Programming Assignment 5  (C++ edition)
-=======================================================
-
-Your directory should now contain the following files:
-
- Makefile	      -> [course dir]/assignments/PA5/Makefile
- README
- ast-lex.cc	      -> [course dir]/src/PA5/ast-lex.cc
- ast-parse.cc	      -> [course dir]/src/PA5/ast-parse.cc
- cgen-phase.cc	      -> [course dir]/src/PA5/cgen-phase.cc
- cgen.cc
- cgen.h
- cgen_supp.cc
- cool-tree.cc	      -> [course dir]/src/PA5/cool-tree.cc
- cool-tree.handcode.h
- dumptype.cc	      -> [course dir]/src/PA5/dumptype.cc
- emit.h
- example.cl
- handle_flags.cc      -> [course dir]/src/PA5/handle_flags.cc
- mycoolc	      -> [course dir]/src/PA5/mycoolc*
- stringtab.cc	      -> [course dir]/src/PA5/stringtab.cc
- tree.cc	      -> [course dir]/src/PA5/tree.cc
- utilities.cc	      -> [course dir]/src/PA5/utilities.cc
- *.d
-
-The include (.h) files for this assignment can be found in 
-[course dir]/include/PA5
-
-	The Makefile contains targets for compiling and running your
-	program, as well as handing it in. DO NOT MODIFY.
-
-	The README contains this info. Part of the assignment is to
-	fill the README with the write-up for your project. You should
-	explain design decisions, explain why your code is correct,
-	and why your test cases are adequate. It is part of the
-	assignment to clearly and concisely explain things in text as
-	well as to comment your code. Just edit this file.
-
-	In example.cl you should write a correct Cool program which
-	tests as many aspects of the code generator as possible. It
-	should pass your code generator, and running spim on the
-	generated output should run the program correctly.
-
-	cgen.cc is the skeleton file for the code generator. This
-	skeleton is much larger than the ones for previous
-	assignments.  The skeleton provides three components of the
-	code generator:
-
-		- functions to build the inheritance graph; (we supply
-		  this in case you didn't get this working for PA4)
-
-		- functions to emit global data and constants;
-		 
-		- functions to emit spim instructions; (we supply
-		  these last two to save you some tedious coding)
-
-	You should work to understand this code, and it will help you
-        write the rest of the code generator.
-
-	cgen.h is the header file for the code generator. Feel free to
-	add anything you need.
-
-	cgen_supp.cc is general support code for the code generator.
-	You can add functions as you see fit, but do not modify the 3
-	functions:
-
-		o byte_mode
-		o ascii_mode
-		o emit_string_constant
-
-	emit.h defines a bunch of macros which should come in handy
-	when you actually want to emit code. Feel free to change
-	anything here to suit your needs.
-
-        cgen-phase.cc supplies the driver for the compiler. You should
-        not modify this code.  The script mycoolc can pass any of the
-        standard flags to the code generator; for this assignment, -c
-        (code generator debug) may be useful as it sets a global
-        variable cgen_debug to true (1).  If you want your code
-        generator to print debug information when the option is set,
-        write your debug code in the following format:
-
-	      if (cgen_debug)
-	      {
-		...
-	      }
-
-	symtab.h contains a symbol table implementation. You may
-        modify this file if you'd like.  To do so, remove the link and
-        copy `[course dir]/include/PA5/symtab.h' to your local
-        directory.
-
-	cool.h contains definitions that are used by almost all parts
-	of the compiler. DO NOT MODIFY.
-
-        tree.h contains the base class `tree_node' of the AST nodes.
-
-        cool-tree.cc, cool-tree.h, and cool-tree.handcode.h contain
-        the declarations and definitions of code generation AST nodes.
-        You may add fields as you wish, but you shouldn't modify any
-        of the methods already there except `code', which you may
-        modify or remove as you wish.  Note that cool-tree.handcode.h
-        is different from the same file in PA4---this file contains
-        function definitions needed for the cgen.cc skeleton.  You may
-        modify cool-tree.h or cool-tree.handcode.h, but don't modify
-        cool-tree.cc.  Place all method definitions in cgen.cc
-
-	stringtab.h contains functions to manipulate the string table.
-	DO NOT MODIFY.
-
-	dumptype.cc contains functions for printing out an abstract
-	syntax tree.  DO NOT MODIFY.
-
-        *.d dependency files, generated automatically by the makefile.
-
-Instructions
-------------
-
-	To compile your compiler and code generator type:
-
-	% gmake cgen
-
-	To test your compiler, type:
-
-	% ./mycoolc [-o output filename] <file1.cl> <file2.cl> ...
-
-	This command parses all the cool files given on the command
-	line, passes them through the semantic checker, and then hands
-	the program AST to your code generator.
-
-	To run your compiler on the file example.cl, type:
-
-	% gmake dotest
-
-	To run the produced code:
-
-	% spim -file file1.s  /* or the output filename you chose */
-	
-	To turnin your work type:
-
-	% gmake submit-clean
-
-	And run the "submit" program following the instructions on the
-	course web page.
-	
- 	You may turn in the assignment as many times as you like.
- 	However, only the last version will be retained for grading.
-
-	If you change architectures you must issue
-
-	% gmake clean
-
-	when you switch from one type of machine to the other.  If at
-	some point you get weird errors from the linker, you probably
-	forgot this step.
-
-	GOOD LUCK!
-
----8<------8<------8<------8<---cut here---8<------8<------8<------8<---
 
 Write-up for PA5
 ----------------
+**Marco Túlio de Pinho e Raul Araju**
+--------------------------
 
+## Tags
+
+As classes básicas (Str, Int, Bool, IO e Object) receberam tags de 0 a 4. As novas classes receberam tags de 5 em diante de acordo com sua ordem na lista *classes*. Armazenamos as tags em um map, onde a chave é o nome da classe e o valor é a tag relacionada.
+
+## Emitir: protótipos, nameTab e dispatch tables
+
+Para esses papéis, criamos as funções *emit_nametab*, *emit_parenttab*, *emit_objtab*, *emit_dispatchtables* e *emit_prototypes*. Todas utilizam a busca em largura pela árvore de classes para realizar suas funções. Viu-se necessário acessar a árvore fora do escopo do objeto *CgenClassTable*, pois era preciso acessar as funções de uma classe por meio do seu nome. Para isso, criamos um gancho externo que permite acessar a raiz da árvore. Seguimos as especificações do Cool Runtime System na geração dos resultados das funções.
+
+## Emitir: inicialização de objetos e métodos de classes
+
+Para esses papéis, criamos as funções *emit_initializers* e *emit_methods*
+
+## Métodos para produção de código para expressões
+
+Reproduzimos as instruções em assembly que gerariam cada expressão por meio das funções *emit_** definidas no arquivo. Adicionamos a todos os métodos o parâmetro *Context &env*, necessário para se ter o escopo de execução de cada expressão.
+
+## Ambiente de Execução (Context)
+
+A classe `Context` guarda informações contextuais relacionadas ao processo de geração de código. Nesse sentido, ela mantém informações sobre o contexto atual durante a geração de código, incluindo a classe sendo processada, atributos da classe, argumentos do método e símbolos da pilha.
+
+### Propósito:
+
+1. **Informações da Classe:**
+   - `Class_ cls`: Representa a classe atual sendo processada.
+
+2. **Atributos da Classe:**
+   - `std::vector<attr_class *> class_attrs`: Armazena atributos da classe para a classe atual.
+
+3. **Argumentos do Método:**
+   - `std::vector<Formal> mth_args`: Armazena argumentos do método para o método atual.
+
+4. **Símbolos da Pilha:**
+   - `std::vector<Symbol> stack_symbols`: Mantém uma pilha de símbolos para variáveis introduzidas no escopo atual.
+
+### Acessadores e Modificadores:
+
+   - `get_cls()`, `set_cls(Class_ cls)`: Obter e definir a classe atual.
+   - `get_class_attrs_size()`: Obter o tamanho do vetor de atributos da classe.
+   - `get_mth_args_size()`: Obter o tamanho do vetor de argumentos do método.
+   - `add_cls_attr(attr_class *attr)`: Adicionar um atributo de classe ao vetor.
+   - `add_mth_arg(Formal formal)`: Adicionar um argumento do método ao vetor.
+   - `clear_mth_args()`: Limpar o vetor de argumentos do método.
+   - `push_stack_symbol(Symbol name)`: Empurrar um símbolo para a pilha.
+   - `pop_stack_symbol()`: Retirar um símbolo da pilha.
+
+### Consultas Posicionais:
+
+   - `get_let_var_pos_rev(Symbol name)`: Obter a posição (índice) de uma variável introduzida por `let` em ordem reversa na pilha.
+   - `get_arg_pos(Symbol name)`: Obter a posição (índice) de um argumento do método.
+   - `get_cls_attr_pos(Symbol name)`: Obter a posição (índice) de um atributo de classe.
+
+A classe é projetada para gerenciar e consultar informações sobre o contexto atual, como hierarquia de classe, atributos, argumentos do método e variáveis locais. Essas informações são usadas durante a geração de código para rastrear vinculações de variáveis, resolver identificadores e gerar instruções apropriadas.
